partiql/tests/snapshots/pretty__graph_shapes_1.snap
---
source: partiql/tests/pretty.rs
expression: doc
---
========================================================================================================================================================================================================
SELECT * FROM (g MATCH (x)-[e]->*(y) ONE ROW PER MATCH )
========================================================================================================================================================================================================

------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
SELECT * FROM (g MATCH (x) -[e]->* (y)
  ONE ROW PER MATCH)

------------------------------------------------------------------------------------------------------------------------
SELECT * FROM (g MATCH (x) -[e]->* (y)
  ONE ROW PER MATCH)

--------------------------------------------------------------------------------
SELECT * FROM (g MATCH (x) -[e]->* (y)
  ONE ROW PER MATCH)

----------------------------------------
SELECT * FROM (g MATCH (x) -[e]->* (y)
  ONE ROW PER MATCH)

------------------------------
SELECT *
FROM (g MATCH (x) -[e]->* (y)
  ONE ROW PER MATCH)

--------------------
SELECT *
FROM (g MATCH (x) -[e]->* (y)
  ONE ROW PER MATCH)

----------
SELECT *
FROM (g MATCH (x) -[e]->* (y)
  ONE ROW PER MATCH)
