partiql/tests/snapshots/pretty__graph_shapes_10.snap
---
source: partiql/tests/pretty.rs
expression: doc
---
========================================================================================================================================================================================================
SELECT * FROM (g MATCH (x)-[e]->*(y) EXPORT NO SINGLETONS )
========================================================================================================================================================================================================

------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
SELECT * FROM (g MATCH (x) -[e]->* (y)
  EXPORT NO SINGLETONS)

------------------------------------------------------------------------------------------------------------------------
SELECT * FROM (g MATCH (x) -[e]->* (y)
  EXPORT NO SINGLETONS)

--------------------------------------------------------------------------------
SELECT * FROM (g MATCH (x) -[e]->* (y)
  EXPORT NO SINGLETONS)

----------------------------------------
SELECT * FROM (g MATCH (x) -[e]->* (y)
  EXPORT NO SINGLETONS)

------------------------------
SELECT *
FROM (g MATCH (x) -[e]->* (y)
  EXPORT NO SINGLETONS)

--------------------
SELECT *
FROM (g MATCH (x) -[e]->* (y)
  EXPORT NO SINGLETONS)

----------
SELECT *
FROM (g MATCH (x) -[e]->* (y)
  EXPORT NO SINGLETONS)
