partiql/tests/snapshots/pretty__graph_shapes_11.snap
---
source: partiql/tests/pretty.rs
expression: doc
---
========================================================================================================================================================================================================
SELECT * FROM (g MATCH (x)-[e]->*(y) ONE ROW PER MATCH COLUMNS(x as node1, e, y.*) EXPORT ALL SINGLETONS )
========================================================================================================================================================================================================

------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
SELECT * FROM (g MATCH (x) -[e]->* (y)
  ONE ROW PER MATCH
  COLUMNS (x AS node1, e, y.*)
  EXPORT ALL SINGLETONS)

------------------------------------------------------------------------------------------------------------------------
SELECT * FROM (g MATCH (x) -[e]->* (y)
  ONE ROW PER MATCH
  COLUMNS (x AS node1, e, y.*)
  EXPORT ALL SINGLETONS)

--------------------------------------------------------------------------------
SELECT * FROM (g MATCH (x) -[e]->* (y)
  ONE ROW PER MATCH
  COLUMNS (x AS node1, e, y.*)
  EXPORT ALL SINGLETONS)

----------------------------------------
SELECT * FROM (g MATCH (x) -[e]->* (y)
  ONE ROW PER MATCH
  COLUMNS (x AS node1, e, y.*)
  EXPORT ALL SINGLETONS)

------------------------------
SELECT *
FROM (g MATCH (x) -[e]->* (y)
  ONE ROW PER MATCH
  COLUMNS (x AS node1, e, y.*)
  EXPORT ALL SINGLETONS)

--------------------
SELECT *
FROM (g MATCH (x) -[e]->* (y)
  ONE ROW PER MATCH
  COLUMNS (x AS node1,
  e, y.*)
  EXPORT ALL SINGLETONS)

----------
SELECT *
FROM (g MATCH (x) -[e]->* (y)
  ONE ROW PER MATCH
  COLUMNS (x AS node1,
  e, y.*)
  EXPORT ALL SINGLETONS)
