partiql/tests/snapshots/pretty__graph_shapes_2.snap
---
source: partiql/tests/pretty.rs
expression: doc
---
========================================================================================================================================================================================================
SELECT * FROM (g MATCH (x)-[e]->*(y) ONE ROW PER NODE ( x ) )
========================================================================================================================================================================================================

------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
SELECT * FROM (g MATCH (x) -[e]->* (y)
  ONE ROW PER NODE (x))

------------------------------------------------------------------------------------------------------------------------
SELECT * FROM (g MATCH (x) -[e]->* (y)
  ONE ROW PER NODE (x))

--------------------------------------------------------------------------------
SELECT * FROM (g MATCH (x) -[e]->* (y)
  ONE ROW PER NODE (x))

----------------------------------------
SELECT * FROM (g MATCH (x) -[e]->* (y)
  ONE ROW PER NODE (x))

------------------------------
SELECT *
FROM (g MATCH (x) -[e]->* (y)
  ONE ROW PER NODE (x))

--------------------
SELECT *
FROM (g MATCH (x) -[e]->* (y)
  ONE ROW PER NODE
  (x))

----------
SELECT *
FROM (g MATCH (x) -[e]->* (y)
  ONE ROW PER NODE
  (x))
