partiql/tests/snapshots/pretty__graph_shapes_3.snap
---
source: partiql/tests/pretty.rs
expression: doc
---
========================================================================================================================================================================================================
SELECT * FROM (g MATCH p = (x)-[e]->*(y) ONE ROW PER NODE ( x ) IN ( p ) )
========================================================================================================================================================================================================

------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
SELECT * FROM (g MATCH p = (x) -[e]->* (y)
  ONE ROW PER NODE (x) IN (p))

------------------------------------------------------------------------------------------------------------------------
SELECT * FROM (g MATCH p = (x) -[e]->* (y)
  ONE ROW PER NODE (x) IN (p))

--------------------------------------------------------------------------------
SELECT * FROM (g MATCH p = (x) -[e]->* (y)
  ONE ROW PER NODE (x) IN (p))

----------------------------------------
SELECT *
FROM (g MATCH p = (x) -[e]->* (y)
  ONE ROW PER NODE (x) IN (p))

------------------------------
SELECT *
FROM (g MATCH p = (x) -[e]->* (y)
  ONE ROW PER NODE (x) IN (p))

--------------------
SELECT *
FROM (g MATCH p = (x) -[e]->* (y)
  ONE ROW PER NODE
  (x) IN (p))

----------
SELECT *
FROM (g MATCH p = (x) -[e]->* (y)
  ONE ROW PER NODE
  (x) IN
  (p))
